<resources>
    <string name="app_name">ProMatchAndroid</string>
    <string name="widget_name">ProMatchWidget</string>
    <string name="promatch_sunnyvale">ProMatch, Sunnyvale</string>

    <string name="success">Success Stories</string>
    <string name="tweets">Tweets</string>
    <string name="linkedin">LinkedIn</string>
    <string name="success_favorite">Favorite Success</string>
    <string name="tweets_favorite">Favorite Tweets</string>
    <string name="linkedin_favorite">Favorite LinkedIn</string>
    <string-array name="tabs_success">
        <item>@string/success</item>
        <item>@string/success_favorite</item>
    </string-array>
    <string-array name="tabs_tweets">
        <item>@string/tweets</item>
        <item>@string/tweets_favorite</item>
    </string-array>
    <string-array name="tabs_linkedin">
        <item>@string/linkedin</item>
        <item>@string/linkedin_favorite</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_success">@string/success</string>
    <string name="drawer_tweets">@string/tweets</string>
    <string name="drawer_linkedin">@string/linkedin</string>
    <string name="drawer_settings">@string/action_settings</string>
    <string name="drawer_about">@string/action_about</string>

    <string name="annotation_hours">Hours</string>
    <string name="annotation_phone">Phone</string>
    <string name="annotation_email">Email</string>
    <string name="annotation_location">Location</string>
    <string name="promatch_hours">
        Monday – Friday, 8:00 a.m. – 4:00 p.m.\n
        \u2022 Mondays: 11:30 a.m. – 12:00 noon\n
        \u2022 Thursdays: 9:30 a.m. – 12:00 noon</string>
    <string name="promatch_phone"><u>408-730-7671</u></string>
    <string name="promatch_email"><u>promatch@novaworks.org</u></string>
    <string name="promatch_location">ProMatch\nNOVA Job Center\n505 W. Olive Avenue, Suite 737\nSunnyvale, CA  94086</string>

    <string name="item_was_saved">Item was saved as Favorite</string>

    <string name="detail_memo_text_hint">Write a memo</string>

    <string name="network_not_connected">Not Connected to Network</string>
    <string name="please_connect_network">Please Connect to Network</string>
</resources>
