<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_success"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/drawer_success" />
        <item
            android:id="@+id/nav_tweets"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/drawer_tweets" />
        <item
            android:id="@+id/nav_linkedin"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/drawer_linkedin" />
    </group>

    <item android:title="">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@mipmap/ic_launcher"
                    android:title="@string/drawer_settings" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@mipmap/ic_launcher"
                    android:title="@string/drawer_about" />
            </group>
        </menu>
    </item>
</menu>